[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighter-agno"
version = "1.0.0"
description = "Agno toolkit for Lighter Exchange - 40 tools for trading, account management, and market data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lighter Exchange", email = "dev@lighter.xyz"}
]
keywords = [
    "lighter",
    "exchange",
    "trading",
    "agno",
    "ai",
    "agent",
    "defi",
    "zksync",
    "perpetual",
    "cryptocurrency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
agno = [
    "agno>=0.1.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "lighter-agno[agno,dev]",
]

[project.urls]
Homepage = "https://github.com/lighter-exchange/lighter-agno"
Documentation = "https://docs.lighter.xyz"
Repository = "https://github.com/lighter-exchange/lighter-agno"
Issues = "https://github.com/lighter-exchange/lighter-agno/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lighter_agno*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
